--- a/templates/session/index.html.twig
+++ b/templates/session/index.html.twig
@@ -6,8 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nombre de viste</title>
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('app') }}
+    {% endblock %}
 </head>
 <body>
-    <h1>Vous avez visité la page {{ app.session.get('nbrVisite') }}</h1>
+    <h1 class=" text-blue-500 font-bold underline text-center text-4xl">Vous avez visité la page {{ app.session.get('nbrVisite') }}</h1>
 </body>
 </html>
