--- a/templates/todo/index.html.twig
+++ b/templates/todo/index.html.twig
@@ -26,12 +26,12 @@
             {{ message }}
         </div>
     {% endfor %}
-    <div class=" bg-gray-500 max-h-[300px] max-w-[800px] m-auto mt-10 p-10">
+    <div class=" bg-gray-500 max-h-full max-w-[800px] m-auto mt-10 p-10">
         <h1 class="text-2xl uppercase text-center font-mono">Todo liste</h1>
         <div class=" list-none">
-            {% for name,content in app.session.get('todos') %}
+            {% for todo in todos %}
                 <li class="text-xl flex text-black justify-between" >
-                    <span class="text-white uppercase">{{ name }}</span> {{ content }}
+                    <span class="text-white uppercase">{{ todo.author }}</span> {{ todo.tache }}
                 </li>
             {% endfor %}
         </div>
